--- a/docker/mysql/Dockerfile
+++ b/docker/mysql/Dockerfile
@@ -1,5 +1,5 @@
 FROM mysql:5.7
 
-ENV MYSQL_DATABASE=sw_db
+ENV MYSQL_DATABASE=dt_db
 ENV MYSQL_ROOT_PASSWORD=root
 COPY setup.sql /docker-entrypoint-initdb.d/
