Increase pma file size limi, fux seeder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - PMA_HOST=mysql
       - PMA_USER=root
       - PMA_PASSWORD=root
+      - UPLOAD_LIMIT=100M
     restart: always
     ports:
       - 8080:80
